Defined menu Routes

--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,4 @@
-<!-- SDEV328/views/home-page.html  -->
+<!-- SDEV328/views/home.html  -->
 
 <!doctype html>
 <html lang="en">
@@ -17,12 +17,8 @@
     <h2>Serving the best burgers in the world!</h2>
     <h3>View Menus</h3>
     <a href="menus/breakfast">Breakfast</a>
-    <br>
-    <a href="menus/lunch">Lunch</a>
-    <br>
-    <a href="menus/dinner">Dinner</a>
-    <br>
     <a type="button" class="btn btn-primary" href="order1">Place an Order</a>
+    <br>
     <img class="img-fluid" src="images/diner-background.jpg" alt="Diner Picture">
 </div>
 </body>
