--- a/views/order-summary.html
+++ b/views/order-summary.html
@@ -3,8 +3,8 @@
 
 <body>
 <div class="container text-center p-3">
-    <h1>Thank you for ordering {{@SESSION.food}} for {{@SESSION.meal}}</h1>
-    <p>Condiments: {{@SESSION.condiments}}</p>
+    <h1>Thank you for ordering {{@SESSION.order->getFood()}} for {{@SESSION.order->getMeal()}}</h1>
+    <p>Condiments: {{@SESSION.order->getCondiments()}}</p>
 
     <a href="order1">Place another order</a>
     <br>
